WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277966
[Writing Tools] Mail body temporarily disappears when accepting short form smart reply until questionnaire appears
https://bugs.webkit.org/show_bug.cgi?id=277966
Summary
[Writing Tools] Mail body temporarily disappears when accepting short form sm...
Richard Robinson
Reported
2024-08-12 12:31:56 PDT
rdar://132910026
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-08-12 12:36:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32050
EWS
Comment 2
2024-08-12 13:39:57 PDT
Committed
282133@main
(29fb9af4daf6): <
https://commits.webkit.org/282133@main
> Reviewed commits have been landed. Closing PR #32050 and removing active labels.
EWS
Comment 3
2024-08-13 13:27:21 PDT
Committed
280938.227@safari-7619-branch
(87c640d84f21): <
https://commits.webkit.org/280938.227@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1593 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug