[Writing Tools] Mail body temporarily disappears when accepting short form smart reply until questionnaire appears https://bugs.webkit.org/show_bug.cgi?id=277966 rdar://132910026

Reviewed by Tim Horton.

During the Writing Tools text animation, the text in the session range that has not yet been animated is supposed
to be hidden for the duration of the animation. However, the entire text from the end of the animated range to the
end of the entire document was erroneously being hidden.

As a result, when using Smart Replies, the entire document is hidden during the animation since the session range
is a caret range.

Fix by adjusting the range of the text that is not yet animated to end at the end of the session range instead of
the entire document.

Also, fix some formatting issues, and use the correct types in more places.

* Source/WebKit/WebProcess/WebPage/Cocoa/TextAnimationController.h:
* Source/WebKit/WebProcess/WebPage/Cocoa/TextAnimationController.mm:
(WebKit::TextAnimationController::unreplacedRangeForSessionWithID const):
(WebKit::TextAnimationController::contextRangeForTextAnimationID const):
(WebKit::TextAnimationController::removeTransparentMarkersForSessionID):
(WebKit::TextAnimationController::removeInitialTextAnimation):
(WebKit::TextAnimationController::addInitialTextAnimation):
(WebKit::TextAnimationController::addSourceTextAnimation):
(WebKit::TextAnimationController::addDestinationTextAnimation):
(WebKit::TextAnimationController::showSelectionForWritingToolsSessionAssociatedWithAnimationID):
(WebKit::TextAnimationController::updateUnderlyingTextVisibilityForTextAnimationID):
(WebKit::TextAnimationController::clearAnimationsForSessionID):
(WebKit::TextAnimationController::createTextIndicatorForTextAnimationID):

Canonical link: https://commits.webkit.org/282133@main